@@ -1,3 +1,7 @@
+2012-01-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus.texi (Group Parameters): Note precedence.
+
 2011-12-30  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* gnus.texi (Filtering New Groups, Score File Format): Spelling fix.
