@@ -1,3 +1,7 @@
+2012-01-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus.el (gnus-parameters): Note precedence.
+
 2012-01-04  Leo  <sdl.web@gmail.com>
 
 	* nndraft.el (nndraft-update-unread-articles): Don't move point around
